POMP-32: added search list view and inforamtion section
Took 6 hours 56 minutes